Fix z-index and add some markup

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ header {
   height: 80px;
   background-color: rgba(17, 17, 17, 0.9);
   position: fixed;
-  z-idnex: 10;
+  z-index: 3;
   .logo {
     margin: 20px 0 0 100px;
     float: left;
@@ -64,7 +64,42 @@ header {
   }
 }
 .structure {
+  position: absolute;
+  width: 100%;
   img {
-    max-width: 100%;
+    z-index: 1;
+    width: 100%;
+    height: 800px;
+    position: absolute;
+  }
+  .info {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    color: #fff;
+    font-family: "Open Sans";
+    h2 {
+      margin-top: 200px;
+      font-weight: 300;
+      font-size: 30px;
+    }
+    p {
+      margin: 104px auto 0 auto;
+      width: 700px;
+      height: 125px;
+      font-weight: 400;
+      font-size: 25px;
+    }
+    button {
+      margin: 104px auto 0 auto;
+      width: 200px;
+      height: 60px;
+      border-radius: 20px;
+      border: 1px solid #fff;
+      background-color: transparent;
+      color: #fff;
+      font-weigth: 600;
+      font-size: 12px;
+    }
   }
 }
